force-app/main/default/objects/marketevents_c_dmo__dlm/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <label>Created Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Created Date</labelOverride>
        <masterLabel>Created Date</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>