force-app/main/default/objects/marketevents_c_dmo__dlm/fields/IAValue_c__c.field-meta.xml
<CustomField>
    <fullName>IAValue_c__c</fullName>
    <label>IAValue</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>IAValue</labelOverride>
        <masterLabel>IAValue</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>