force-app/main/default/objects/marketevents_c_dmo__dlm/fields/Interaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Id__c</fullName>
    <label>Interaction Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Interaction Id</labelOverride>
        <masterLabel>Interaction Id</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>