force-app/main/default/objects/marketevents_c_dmo__dlm/fields/KQ_IAValue_c__c.field-meta.xml
<CustomField>
    <fullName>KQ_IAValue_c__c</fullName>
    <label>Key Qualifier IAValue</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier IAValue</labelOverride>
        <masterLabel>Key Qualifier IAValue</masterLabel>
        <refAttrDeveloperName>KQ_IAValue_c</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>