force-app/main/default/objects/marketevents_c_dmo__dlm/fields/ProcessedFlag_c__c.field-meta.xml
<CustomField>
    <fullName>ProcessedFlag_c__c</fullName>
    <label>ProcessedFlag</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>ProcessedFlag</labelOverride>
        <masterLabel>ProcessedFlag</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>