force-app/main/default/objects/marketevents_c_dmo__dlm/fields/rel_1776348677759_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1776348677759_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>marketevents_c_dmo_IAValue_c_map_sso_rel</label>
    <referenceTo>ssot__FinancialHolding__dlm</referenceTo>
    <relationshipLabel>marketevents_c_dmo_IAValue_c_map_sso_rel</relationshipLabel>
    <relationshipName>rel_1776348677759_end</relationshipName>
    <type>Lookup</type>
</CustomField>