force-app/main/default/objects/marketevents_c_dmo__dlm/fields/Title_c__c.field-meta.xml
<CustomField>
    <fullName>Title_c__c</fullName>
    <label>Title</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Title</labelOverride>
        <masterLabel>Title</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>